chore: change to relative path

--- a/notebooks/First_NN_statics/NN_5_words.ipynb
+++ b/notebooks/First_NN_statics/NN_5_words.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -29,20 +29,20 @@
        "h5py._hl.files.File"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "###* Load the dataset\n",
-    "dataset = h5.File('C:\\\\Users\\\\hgera\\\\OneDrive\\\\Escritorio\\\\PY4E\\Keet\\\\Generate_data\\\\positions_GERADO.h5', 'r')\n",
+    "dataset = h5.File('..\\\\..\\\\data\\\\features\\\\positions_GERADO.h5', 'r')\n",
     "type(dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "(1194,)"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "(1194,)"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "array(['A', 'D', 'E', 'G', 'O', 'R'], dtype='<U1')"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "(84, 1194)"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +943,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
