chore: change to relative path

--- a/data/Generate_h5data/create_h5_LSM.ipynb
+++ b/data/Generate_h5data/create_h5_LSM.ipynb
@@ -22,11 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path = 'C:\\\\Users\\\\hgera\\\\OneDrive\\\\Escritorio\\\\PY4E\\\\Keet\\\\ESTATICAS'\n",
+    "base_path = '..\\\\dataset\\\\ESTATICAS'\n",
     "\n",
     "letters = os.listdir(base_path) ###* List of the letters to write in hdf5\n",
     "data = {}   ###* Dictionary to store the data of the letters\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "20  723    225  619    490"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,11 +330,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5.File('positions_all_statics.h5', 'w') as h5file:\n",
+    "with h5.File('..\\\\features\\\\positions_all_statics.h5', 'w') as h5file:\n",
     "    for letter, positions in data.items():\n",
     "        grp = h5file.create_group(letter)\n",
     "        grp.create_dataset('positions', data=positions)"
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -358,19 +358,19 @@
        "h5py._hl.files.File"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset = h5.File('C:\\\\Users\\\\hgera\\\\OneDrive\\\\Escritorio\\\\PY4E\\Keet\\\\Generate_data\\\\positions_GERADO.h5', 'r')\n",
+    "dataset = h5.File('..\\\\features\\\\positions_all_statics.h5', 'r')\n",
     "type(dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
     }
    ],
    "source": [
-    "with h5.File('positions_all_statics.h5', 'r') as h5file:\n",
+    "with h5.File('..\\\\features\\\\positions_all_statics.h5', 'r') as h5file:\n",
     "    data = []\n",
     "    labels = []\n",
     "    for letter in h5file.keys():\n",
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -446,22 +446,13 @@
        "       ['Y']], dtype='<U1')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.reshape()"
    ]
   },
   {
@@ -472,7 +463,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
