chores: changes using loaders to all codes

--- a/notebooks/NN_all_statics/NN_all_statics.ipynb
+++ b/notebooks/NN_all_statics/NN_all_statics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,14 @@
     "from tensorflow.python.framework.ops import EagerTensor\n",
     "from tensorflow.python.ops.resource_variable_ops import ResourceVariable\n",
     "from tensorflow import keras\n",
-    "import time\n",
+    "from modules.loaders import load_dataset\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -29,14 +29,14 @@
        "h5py._hl.files.File"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "###* Load the dataset\n",
-    "dataset = h5.File('C:\\\\Users\\\\hgera\\\\OneDrive\\\\Escritorio\\\\PY4E\\\\Keet\\\\Codes\\\\NN_all_statics\\\\positions_all_statics.h5', 'r')\n",
+    "dataset = load_dataset('positions_all_statics.h5').load_h5()\n",
     "type(dataset)"
    ]
   },
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -791,15 +791,8 @@
    ],
    "source": [
     "#* Save the model\n",
-    "path_save = 'all_statics_model.h5'\n",
+    "path_save = '..\\\\..\\\\models\\\\Trained\\\\signs\\\\all_statics_model.h5'\n",
     "model.save(path_save)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### REVISION\n"
    ]
   },
   {
@@ -956,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -972,11 +965,7 @@
     "import joblib\n",
     "import numpy as np\n",
     "\n",
-    "\n",
-    "# Guardar el escalador ajustado en un archivo\n",
-    "joblib.dump(scaler, 'scaler.pkl')\n",
-    "\n",
-    "print(\"Escalador ajustado y guardado en 'scaler.pkl'\")"
+    "joblib.dump(scaler, '..\\\\..\\\\models\\\\Trained\\\\signs\\\\all_statics_scaler.pkl')\n"
    ]
   },
   {
@@ -1050,7 +1039,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
