--- a/notebooks/First_NN_statics/NN_5_words.ipynb
+++ b/notebooks/First_NN_statics/NN_5_words.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "from tensorflow.python.framework.ops import EagerTensor\n",
     "from tensorflow.python.ops.resource_variable_ops import ResourceVariable\n",
     "from tensorflow import keras\n",
-    "import time\n",
+    "from modules.loaders import load_dataset \n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split"
    ]
@@ -36,7 +36,7 @@
    ],
    "source": [
     "###* Load the dataset\n",
-    "dataset = h5.File('..\\\\..\\\\data\\\\features\\\\positions_GERADO.h5', 'r')\n",
+    "dataset = load_dataset('positions_GERADO.h5').load_h5()\n",
     "type(dataset)"
    ]
   },
