--- a/notebooks/NN_FACES/NN_FACES.ipynb
+++ b/notebooks/NN_FACES/NN_FACES.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,14 @@
     "from tensorflow.python.framework.ops import EagerTensor\n",
     "from tensorflow.python.ops.resource_variable_ops import ResourceVariable\n",
     "from tensorflow import keras\n",
-    "import time\n",
+    "from modules.loaders import load_dataset\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -29,14 +29,14 @@
        "h5py._hl.files.File"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "###* Load the dataset\n",
-    "dataset = h5.File('C:\\\\Users\\\\hgera\\\\OneDrive\\\\Escritorio\\\\PY4E\\\\Keet\\\\Codes\\\\NN_FACES\\\\positions_FACES.h5', 'r')\n",
+    "dataset = load_dataset(h5_file= 'positions_FACES.h5').load_h5()\n",
     "type(dataset)"
    ]
   },
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1451,7 @@
    ],
    "source": [
     "#* Save the model\n",
-    "path_save = 'face_model.h5'\n",
+    "path_save = '..\\\\..\\\\models\\\\Trained\\\\face\\\\face_model.h5'\n",
     "model.save(path_save)"
    ]
   },
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1638,15 +1638,13 @@
     "\n",
     "\n",
     "# Guardar el escalador ajustado en un archivo\n",
-    "joblib.dump(scaler, 'scaler_faces.pkl')\n",
-    "\n",
-    "print(\"Escalador ajustado y guardado en 'scaler.pkl'\")"
+    "joblib.dump(scaler, '..\\\\..\\\\models\\\\Trained\\\\signs\\\\scaler_faces.pkl')\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
