feat: :bulb: New NN faces
Version 2 of NN for faces with a new database

add matrix confusion and create new models

--- a/data/Generate_h5data/create_h5_FACE.ipynb
+++ b/data/Generate_h5data/create_h5_FACE.ipynb
@@ -22,61 +22,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Enojo', 'Feliz', 'Neutral', 'Sorpresa', 'Triste']"
+       "['enojado', 'feliz', 'neutral', 'sorpresa', 'triste']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "base_path = 'C:\\\\Users\\\\hgera\\\\OneDrive\\\\Escritorio\\\\PY4E\\\\Keet\\\\Datasets\\\\Caras_2'\n",
+    "base_path = 'C:\\\\Users\\hgera\\OneDrive\\Escritorio\\Computer-vision-LSM\\data\\dataset\\Faces'\n",
+    "base_path = base_path.replace('\\\\', os.path.sep) ###* Replace the backslash with the correct separator\n",
     "faces = os.listdir(base_path) ###* List of the letters to write in hdf5\n",
     "faces"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = {}   ###* Dictionary to store the data of the letters\n",
     "for face in faces:\n",
-    "    face_path = os.path.join(base_path, f'{face}') ###* Path to the folder of the letter\n",
+    "    face_path = os.path.join(base_path, f'{face}') ###* Path to the folder e\n",
     "    csv_files = [f for f in os.listdir(face_path) if f.endswith('.csv')] ###* List of the csv files in the folder\n",
     "    # print(csv_files) \n",
     "    positions = [] ###* List to store the positions of the letter\n",
     "    for csv_file in csv_files: ###* Iterate over the csv files\n",
     "        file_path = os.path.join(face_path, csv_file) ###* Path to the csv file\n",
     "        df = pd.read_csv(file_path, header=0 ) ###* Read the csv file\n",
-    "        df = df.drop(columns=['cz'])\n",
+    "        # df = df.drop(columns=['cz'])\n",
     "        positions.append(df.values.reshape(df.values.shape[0]*df.values.shape[1],1)) ###* Append the values of the csv file to the list\n",
     "    positions = np.concatenate(positions, axis=1) ###* Concatenate the values of the cs\n",
-    "    data[face] = positions ###* Concatenate the positions of the letter"
+    "    data[face] = positions ###* Concatenate the positions "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enojo: (936, 1309)\n",
-      "Feliz: (936, 3722)\n",
-      "Neutral: (936, 4018)\n",
-      "Sorpresa: (936, 1233)\n",
-      "Triste: (936, 3912)\n"
+      "enojado: (936, 3197)\n",
+      "feliz: (936, 5043)\n",
+      "neutral: (936, 5124)\n",
+      "sorpresa: (936, 4033)\n",
+      "triste: (936, 3079)\n"
      ]
     }
    ],
@@ -100,16 +101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Enojo', 'Feliz', 'Neutral', 'Sorpresa', 'Triste']"
+       "['enojado', 'feliz', 'neutral', 'sorpresa', 'triste']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,24 +121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enojo: (936, 1233)\n",
-      "Feliz: (936, 1233)\n",
-      "Neutral: (936, 1233)\n",
-      "Sorpresa: (936, 1233)\n",
-      "Triste: (936, 1233)\n"
+      "enojado: (936, 3079)\n",
+      "feliz: (936, 3079)\n",
+      "neutral: (936, 3079)\n",
+      "sorpresa: (936, 3079)\n",
+      "triste: (936, 3079)\n"
      ]
     }
    ],
    "source": [
     "for face in faces:\n",
-    "    data[face] = data[face][:,:1233] ###* Take the first  values of the faces\n",
+    "    data[face] = data[face][:,:3079] ###* Take the first  values of the faces\n",
     "for face in faces:\n",
     "    print(f'{face}: {data[face].shape}')    \n"
    ]
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -190,28 +191,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.507080</td>\n",
-       "      <td>0.687547</td>\n",
+       "      <td>47</td>\n",
+       "      <td>71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.506507</td>\n",
-       "      <td>0.585617</td>\n",
+       "      <td>45</td>\n",
+       "      <td>60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.505673</td>\n",
-       "      <td>0.623980</td>\n",
+       "      <td>46</td>\n",
+       "      <td>63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.481656</td>\n",
-       "      <td>0.494654</td>\n",
+       "      <td>41</td>\n",
+       "      <td>49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.506479</td>\n",
-       "      <td>0.554580</td>\n",
+       "      <td>45</td>\n",
+       "      <td>57</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -220,28 +221,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>463</th>\n",
-       "      <td>0.574601</td>\n",
-       "      <td>0.445178</td>\n",
+       "      <td>52</td>\n",
+       "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>464</th>\n",
-       "      <td>0.558181</td>\n",
-       "      <td>0.448533</td>\n",
+       "      <td>51</td>\n",
+       "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>465</th>\n",
-       "      <td>0.549747</td>\n",
-       "      <td>0.449653</td>\n",
+       "      <td>50</td>\n",
+       "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>466</th>\n",
-       "      <td>0.705346</td>\n",
-       "      <td>0.438701</td>\n",
+       "      <td>69</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>467</th>\n",
-       "      <td>0.719566</td>\n",
-       "      <td>0.431056</td>\n",
+       "      <td>71</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -249,23 +250,23 @@
        "</div>"
       ],
       "text/plain": [
-       "           cx        cy\n",
-       "0    0.507080  0.687547\n",
-       "1    0.506507  0.585617\n",
-       "2    0.505673  0.623980\n",
-       "3    0.481656  0.494654\n",
-       "4    0.506479  0.554580\n",
-       "..        ...       ...\n",
-       "463  0.574601  0.445178\n",
-       "464  0.558181  0.448533\n",
-       "465  0.549747  0.449653\n",
-       "466  0.705346  0.438701\n",
-       "467  0.719566  0.431056\n",
+       "     cx  cy\n",
+       "0    47  71\n",
+       "1    45  60\n",
+       "2    46  63\n",
+       "3    41  49\n",
+       "4    45  57\n",
+       "..   ..  ..\n",
+       "463  52  37\n",
+       "464  51  39\n",
+       "465  50  39\n",
+       "466  69  34\n",
+       "467  71  32\n",
        "\n",
        "[468 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This make sense because we have m csv files, and for each csv we have a 468X3 data"
+    "### This make sense because we have m csv files, and for each csv we have a 468X2 data"
    ]
   },
   {
@@ -290,11 +291,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "save_path: C:\\Users\\hgera\\OneDrive\\Escritorio\\Computer-vision-LSM\\data\\features\\positions_FACES_v2.h5\n"
+     ]
+    }
+   ],
    "source": [
-    "with h5.File('C:\\\\Users\\\\hgera\\\\OneDrive\\\\Escritorio\\\\PY4E\\\\Keet\\\\Codes\\\\NN_FACES\\\\positions_FACES.h5', 'w') as h5file:\n",
+    "save_path = 'C:\\\\Users\\hgera\\OneDrive\\Escritorio\\Computer-vision-LSM\\data\\\\features\\positions_FACES_v2.h5'\n",
+    "save_path = save_path.replace('\\\\', os.path.sep) ###* Replace the backslash with the correct separator\n",
+    "print('save_path:', save_path)\n",
+    "with h5.File(save_path, 'w') as h5file:\n",
     "    for face, positions in data.items():\n",
     "        grp = h5file.create_group(face)\n",
     "        grp.create_dataset('positions', data=positions)"
@@ -309,33 +321,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = h5.File('C:\\\\Users\\\\hgera\\\\OneDrive\\\\Escritorio\\\\PY4E\\\\Keet\\\\Codes\\\\NN_FACES\\\\positions_FACES.h5', 'r')\n",
+    "dataset = h5.File(save_path, 'r')\n",
     "# type(dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(936, 1233)\n",
-      "(936, 1233)\n",
-      "(936, 1233)\n",
-      "(936, 1233)\n",
-      "(936, 1233)\n"
+      "(936, 3079)\n",
+      "(936, 3079)\n",
+      "(936, 3079)\n",
+      "(936, 3079)\n",
+      "(936, 3079)\n"
      ]
     }
    ],
    "source": [
-    "with h5.File('C:\\\\Users\\\\hgera\\\\OneDrive\\\\Escritorio\\\\PY4E\\\\Keet\\\\Codes\\\\NN_FACES\\\\positions_FACES.h5', 'r') as h5file:\n",
+    "with h5.File(save_path, 'r') as h5file:\n",
     "    data = []\n",
     "    labels = []\n",
     "    for letter in h5file.keys():\n",
@@ -350,20 +362,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([['Enojo'],\n",
-       "       ['Feliz'],\n",
-       "       ['Neutral'],\n",
-       "       ['Sorpresa'],\n",
-       "       ['Triste']], dtype='<U8')"
+       "array([['enojado'],\n",
+       "       ['feliz'],\n",
+       "       ['neutral'],\n",
+       "       ['sorpresa'],\n",
+       "       ['triste']], dtype='<U8')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +392,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
