feat: created folders with modules for specific tasks

--- a/notebooks/Take_database/Hand_optimize.ipynb
+++ b/notebooks/Take_database/Hand_optimize.ipynb
@@ -12,11 +12,11 @@
     "import os\n",
     "\n",
     "# Agregar la carpeta base al sistema\n",
-    "project_base = os.path.abspath('../../')  # Ajusta esto si no estás en \"notebooks\"\n",
+    "project_base = os.path.abspath('../../')\n",
     "sys.path.append(project_base)\n",
     "\n",
     "# Ahora importa el módulo\n",
-    "from modules import interface as it, start as st, tracking as tr, show as sh, reset as res"
+    "from modules.mod_data_base import interface as it, start as st, tracking as tr, show as sh, reset as res"
    ]
   },
   {
