refactor: :bookmark: camera changes, use of CameraHandler

--- a/notebooks/Take_database/Hand_optimize.ipynb
+++ b/notebooks/Take_database/Hand_optimize.ipynb
@@ -16,6 +16,7 @@
     "sys.path.append(project_base)\n",
     "\n",
     "# Ahora importa el módulo\n",
+    "from modules.config_camera import CameraHandler\n",
     "from modules.mod_data_base import interface as it, start as st, tracking as tr, show as sh, reset as res"
    ]
   },
@@ -56,9 +57,11 @@
    "source": [
     "############################################################################################################*\n",
     "#########* CAMERA SETTINGS ###########\n",
+    "camera = CameraHandler(camera_index=1, width_screen=1280, height_screen=720) ### 0 is the default camera, 1 is the external camera\n",
     "\n",
-    "cap, width, height = st.camera_settings(width_cam= 1280, height_cam= 720, camera=0) #* Width and height of the camera\n",
-    "                                                                                    #* 0 for the default camera, 1 for the external camera\t \n",
+    "camera.set_resolution(camera.width_screen, camera.height_screen) ### Set the resolution of the window of the frame\n",
+    "width, height = camera.get_resolution() ### Get the resolution of the camera\n",
+    "print('camera resolution',width, height)\n",
     "\n",
     "#########* PARAMETERS ###########\n",
     "\n",
@@ -92,7 +95,7 @@
     "###################* While loop for tracking    #################  \n",
     "\n",
     "while True:\n",
-    "    ret, frame, frame_copy, frame_gray, frame_equali, results = tr.read_frames(cap,hands,equali=True)\n",
+    "    ret, frame, frame_copy, frame_gray, frame_equali, results = tr.read_frames(camera,hands,equali=True)\n",
     "    #print(frame.shape)\n",
     "    \n",
     "    roi_save, save_len, point_save, lm_x_h1, lm_y_h1, lm_x_h2, lm_y_h2, lm_x_h1_roi, lm_y_h1_roi, lm_x_h2_roi, lm_y_h2_roi,flag = tr.process_hand_landmarks( point_save, frame_equali, results, width, height, t, tiempo_de_espera\n",
@@ -138,7 +141,7 @@
     "        \n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "        break   #press q for exit\n",
-    "cap.release()\n",
+    "camera.release_camera()\n",
     "cv2.destroyAllWindows()\n"
    ]
   },
