chores:some changes

--- a/notebooks/Get_facelandmarks/Mediapipe_face.ipynb
+++ b/notebooks/Get_facelandmarks/Mediapipe_face.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,13 +175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "hola < cv2.VideoCapture 0000021E689183B0>\n",
       "Resolution: 1280,720\n",
       "using external camera\n",
       "comenzando modelo\n"
@@ -189,7 +190,7 @@
     }
    ],
    "source": [
-    "import keet_database as kdb\n",
+    "from modules import keet_database as kdb\n",
     "import mediapipe as mp\n",
     "import cv2\n",
     "import time\n",
@@ -212,6 +213,9 @@
     "while True:\n",
     "    # Capture frame-by-frame\n",
     "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        print(\"Can't receive frame (stream end?\")\n",
+    "        break\n",
     "    # Convert grayscale frame to RGB format\n",
     "    rgb_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
     "    face_mesh_results = face_mesh_images.process(rgb_frame)\n",
@@ -226,9 +230,9 @@
     "        positions_y = np.array([landmark.y for landmark in landmarks])\n",
     "        positions_z = np.array([landmark.z for landmark in landmarks])\n",
     "        # Dibujar los landmarks en el frame\n",
-    "        # mp_drawing.draw_landmarks(frame, lm[0], connections=mp_face_mesh.FACEMESH_TESSELATION,\n",
-    "                                #   landmark_drawing_spec=None, \n",
-    "                                #   connection_drawing_spec=mp_drawing_styles.get_default_face_mesh_tesselation_style())\n",
+    "        mp_drawing.draw_landmarks(frame, lm[0], connections=mp_face_mesh.FACEMESH_TESSELATION,\n",
+    "                                  landmark_drawing_spec=None, \n",
+    "                                  connection_drawing_spec=mp_drawing_styles.get_default_face_mesh_tesselation_style())\n",
     "        min_x, min_y = np.min(positions_x), np.min(positions_y)\n",
     "        max_x, max_y = np.max(positions_x), np.max(positions_y)\n",
     "        # Dibujar un rectángulo alrededor de la cara\n",
@@ -446,7 +450,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
