--- a/notebooks/Take_database/Hand_optimize.ipynb
+++ b/notebooks/Take_database/Hand_optimize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,35 +22,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Resolution: 1280,720\n",
-      "using default camera\n",
+      "camera resolution 1280 720\n",
       "Format: jpg,csv\n",
       "Waiting time: 3 seconds, Recording time: 2 seconds\n",
       "Selected Sign:A\n",
-      "C://Users//angel//OneDrive//Documentos//Keet//dataset//test//A\n",
-      "Folder 'A' already exists at 'C://Users//angel//OneDrive//Documentos//Keet//dataset//test'.\n",
-      "Last element in the folder:22\n"
+      "C://Users//hgera//Downloads//A//A\n",
+      "Folder 'A' already exists at 'C://Users//hgera//Downloads//A'.\n",
+      "Last element in the folder:8\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not callable",
+     "ename": "AttributeError",
+     "evalue": "'CameraHandler' object has no attribute 'read'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 65\u001b[0m\n\u001b[0;32m     61\u001b[0m kdb\u001b[38;5;241m.\u001b[39mdisplay_mode_text(frame, width, height, DINAMIC)\n\u001b[0;32m     63\u001b[0m \u001b[38;5;66;03m########*   Interfaz ##################\u001b[39;00m\n\u001b[0;32m     64\u001b[0m \u001b[38;5;66;03m#print(lm_y_h1)    \u001b[39;00m\n\u001b[1;32m---> 65\u001b[0m Nimages, SAVED, timeflag, t, RECORDING, t1 \u001b[38;5;241m=\u001b[39m \u001b[43mkdb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minterface\u001b[49m\u001b[43m(\u001b[49m\u001b[43mframe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwidth\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mheight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mroi_save\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfull_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mNimages\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mSAVED\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeflag\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mTs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtiempo_de_espera\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mRECORDING\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDINAMIC\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     66\u001b[0m \u001b[38;5;66;03m#print(lm_y_h1)    \u001b[39;00m\n\u001b[0;32m     67\u001b[0m \n\u001b[0;32m     68\u001b[0m \u001b[38;5;66;03m##############* SHOW THE FRAMES #############\u001b[39;00m\n\u001b[0;32m     70\u001b[0m SAVED \u001b[38;5;241m=\u001b[39m sh\u001b[38;5;241m.\u001b[39mmain_show(frame, SAVED, width, height, roi_save, window_move, df, RECORDING, t1, save_len)\n",
-      "File \u001b[1;32mc:\\Users\\angel\\OneDrive\\Documentos\\Keet\\GitHub\\Computer-vision-LSM\\modules\\keet_database.py:689\u001b[0m, in \u001b[0;36minterface\u001b[1;34m(frame, width, height, roi_save, full_path, Nimages, df, SAVED, timeflag, t, Ts, tiempo_de_espera, RECORDING, t1, DINAMIC)\u001b[0m\n\u001b[0;32m    687\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m DINAMIC \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m:\n\u001b[0;32m    688\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;241m0\u001b[39m \u001b[38;5;241m<\u001b[39m \u001b[38;5;28mlen\u001b[39m(roi_save) \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m3\u001b[39m:\n\u001b[1;32m--> 689\u001b[0m         Nimages, SAVED \u001b[38;5;241m=\u001b[39m \u001b[43mprocess_static_mode\u001b[49m\u001b[43m(\u001b[49m\u001b[43mframe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwidth\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mheight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mroi_save\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfull_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mNimages\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[43mSAVED\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    690\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(roi_save) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m    691\u001b[0m         show_message(frame, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThere are no ROIS\u001b[39m\u001b[38;5;124m'\u001b[39m, (\u001b[38;5;241m0.3\u001b[39m, \u001b[38;5;241m0.9\u001b[39m), width, height)\n",
-      "File \u001b[1;32mc:\\Users\\angel\\OneDrive\\Documentos\\Keet\\GitHub\\Computer-vision-LSM\\modules\\keet_database.py:591\u001b[0m, in \u001b[0;36mprocess_static_mode\u001b[1;34m(frame, width, height, roi_save, full_path, Nimages, df, SAVED)\u001b[0m\n\u001b[0;32m    589\u001b[0m key \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mwaitKey(\u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m&\u001b[39m \u001b[38;5;241m0xFF\u001b[39m\n\u001b[0;32m    590\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m key \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mord\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(roi_save) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m--> 591\u001b[0m     Nimages, SAVED \u001b[38;5;241m=\u001b[39m \u001b[43msave_roi\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mNimages\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfull_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mroi_save\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwidth\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mheight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    592\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m key \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mord\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(roi_save) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m    593\u001b[0m     Nimages, SAVED \u001b[38;5;241m=\u001b[39m save_roi(\u001b[38;5;241m1\u001b[39m, Nimages, full_path, roi_save, frame, width, height, df)\n",
-      "File \u001b[1;32mc:\\Users\\angel\\OneDrive\\Documentos\\Keet\\GitHub\\Computer-vision-LSM\\modules\\keet_database.py:537\u001b[0m, in \u001b[0;36msave_roi\u001b[1;34m(index, Nimages, full_path, roi_save, frame, width, height, df)\u001b[0m\n\u001b[0;32m    535\u001b[0m \u001b[38;5;28;01mglobal\u001b[39;00m lm_x_h1, lm_y_h1, lm_x_h2, lm_y_h2, lm_x_h1_roi, lm_y_h1_roi, lm_x_h2_roi, lm_y_h2_roi\n\u001b[0;32m    536\u001b[0m Nimages \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m--> 537\u001b[0m cv2\u001b[38;5;241m.\u001b[39mimwrite(full_path \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[43mLetra\u001b[49m\u001b[43m(\u001b[49m\u001b[43mNimages\u001b[49m\u001b[43m)\u001b[49m, roi_save[index])\n\u001b[0;32m    538\u001b[0m cv2\u001b[38;5;241m.\u001b[39mputText(frame, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mROI \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mindex\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m SAVED\u001b[39m\u001b[38;5;124m'\u001b[39m, (\u001b[38;5;28mint\u001b[39m(width\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m0.36\u001b[39m),\u001b[38;5;28mint\u001b[39m(height\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m0.4\u001b[39m)), cv2\u001b[38;5;241m.\u001b[39mFONT_HERSHEY_SIMPLEX, \u001b[38;5;241m2\u001b[39m, (\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m255\u001b[39m), \u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m    539\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m index \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not callable"
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 41\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;66;03m#*FIRTS ARGUMENT FOR ROI 1 AND THE SECOND FOR ROI 2\u001b[39;00m\n\u001b[0;32m     37\u001b[0m \n\u001b[0;32m     38\u001b[0m \u001b[38;5;66;03m###################* While loop for tracking    #################  \u001b[39;00m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m---> 41\u001b[0m     ret, frame, frame_copy, frame_gray, frame_equali, results \u001b[38;5;241m=\u001b[39m \u001b[43mtr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_frames\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcamera\u001b[49m\u001b[43m,\u001b[49m\u001b[43mhands\u001b[49m\u001b[43m,\u001b[49m\u001b[43mequali\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     42\u001b[0m     \u001b[38;5;66;03m#print(frame.shape)\u001b[39;00m\n\u001b[0;32m     44\u001b[0m     roi_save, save_len, point_save, lm_x_h1, lm_y_h1, lm_x_h2, lm_y_h2, lm_x_h1_roi, lm_y_h1_roi, lm_x_h2_roi, lm_y_h2_roi,flag \u001b[38;5;241m=\u001b[39m tr\u001b[38;5;241m.\u001b[39mprocess_hand_landmarks( point_save, frame_equali, results, width, height, t, tiempo_de_espera\n\u001b[0;32m     45\u001b[0m                                                     ,save_len,print_lm\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, size_roi \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.087\u001b[39m)         \n",
+      "File \u001b[1;32mc:\\users\\hgera\\onedrive\\escritorio\\github\\computer-vision-lsm\\modules\\mod_data_base\\tracking.py:30\u001b[0m, in \u001b[0;36mread_frames\u001b[1;34m(cap, hands, equali)\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mread_frames\u001b[39m(cap, hands, equali\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mtuple\u001b[39m:\n\u001b[1;32m---> 30\u001b[0m     ret, frame \u001b[38;5;241m=\u001b[39m \u001b[43mcap\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m()  \u001b[38;5;66;03m# Leer frame de la cámara\u001b[39;00m\n\u001b[0;32m     31\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m ret \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m:\n\u001b[0;32m     32\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCamError\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'CameraHandler' object has no attribute 'read'"
      ]
     }
    ],
@@ -416,7 +413,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -430,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
