refactor: Modifying several files to improve compatibility

--- a/notebooks/Take_database/Hand_optimize.ipynb
+++ b/notebooks/Take_database/Hand_optimize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,8 @@
     "sys.path.append(project_base)\n",
     "\n",
     "# Ahora importa el módulo\n",
-    "from modules.config_camera import CameraHandler\n",
-    "from modules.mod_data_base import interface as it, start as st, tracking as tr, show as sh, reset as res"
+    "from config_camera import CameraHandler\n",
+    "from mod_data_base import interface as it, start as st, tracking as tr, show as sh, reset as res"
    ]
   },
   {
