--- a/notebooks/face_analisys/PCA_faces.ipynb
+++ b/notebooks/face_analisys/PCA_faces.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modules.loaders import LoadDataset\n",
+    "from loaders import LoadDataset\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
